[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/record.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/success.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/fail.ogg" type="AudioStream" id=4]
[ext_resource path="res://artiphonie/utility/pronouncing/pronouncing.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/theme/transparent_panel_rounded_corner.tres" type="StyleBox" id=7]
[ext_resource path="res://art/images/clown.jpg" type="Texture" id=8]

[node name="pronouncing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 1
theme = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="incorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="background" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
rect_min_size = Vector2( 1152, 648 )
rect_clip_content = true
mouse_filter = 1
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="background"]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = -9.53674e-07
margin_bottom = 21.56
mouse_filter = 1
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_1" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_1"]
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.4
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_1"]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_1"]
anchor_left = 0.8
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.4
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_1"]
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 272 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_2" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_2"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_2"]
visible = false
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_2"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.4
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_2"]
anchor_left = 0.02
anchor_top = 0.45
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 336 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_3" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_3"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.2
anchor_bottom = 0.9
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_3"]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_3"]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_3"]
visible = false
anchor_left = 0.01
anchor_top = 0.55
anchor_right = 0.99
anchor_bottom = 0.98
margin_left = -3.8147e-06
grow_horizontal = 2
rect_min_size = Vector2( 921.6, 259.2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_4" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_4"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.9
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_4"]
visible = false
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_4"]
anchor_left = 0.6
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_4"]
visible = false
anchor_left = 0.01
anchor_top = 0.55
anchor_right = 0.99
anchor_bottom = 0.98
margin_left = -3.8147e-06
grow_horizontal = 2
rect_min_size = Vector2( 921.6, 259.2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_5" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_5"]
visible = false
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.4
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_5"]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_5"]
anchor_left = 0.8
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.4
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_5"]
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 272 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_6" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_6"]
visible = false
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.2
anchor_bottom = 0.9
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_6"]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_6"]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_6"]
visible = false
anchor_left = 0.01
anchor_top = 0.55
anchor_right = 0.99
anchor_bottom = 0.98
margin_left = -3.8147e-06
grow_horizontal = 2
rect_min_size = Vector2( 921.6, 259.2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_7" type="Control" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_7"]
visible = false
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -3.8147e-06
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_7"]
visible = false
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_7"]
anchor_left = 0.3
anchor_top = 0.15
anchor_right = 0.7
anchor_bottom = 0.4
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_7"]
anchor_left = 0.02
anchor_top = 0.45
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 336 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="correct" to="." method="_on_correct_finished"]
[connection signal="finished" from="incorrect" to="." method="_on_incorrect_finished"]
[connection signal="pressed" from="background/layout_1/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_1/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_2/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_2/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_3/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_3/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_4/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_4/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_5/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_5/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_6/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_6/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="background/layout_7/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_7/record" to="." method="_on_record_pressed"]
